@@ -1,5 +1,11 @@
 2002-10-20  Per Bothner  <per@bothner.com>
 
+	* Declaration.java (followAliases):  If decl is an import decl created
+	by require, and not exported, then skip to the exported field.
+	(makeField):  If this is an alias, but it is constant, use base's type.
+
+	* ModuleExp.java (allocFields):  Skip if decl.ignorable().
+
 	* Compilation.java (addClass):  Change first arg to ModuleExp.
 	This allows some simplification.
 
